[gd_scene load_steps=6 format=3 uid="uid://eciyecscei3w"]

[ext_resource type="Theme" uid="uid://c7wttsm5d72s4" path="res://EndGameScreen/endgametheme.tres" id="1_o4h8i"]
[ext_resource type="Script" path="res://EndGameScreen/end_game.gd" id="2_q2oeq"]
[ext_resource type="Shader" path="res://EndGameScreen/end_game.gdshader" id="3_464yj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mhttp"]
shader = ExtResource("3_464yj")
shader_parameter/blur = 4.62

[sub_resource type="CanvasTexture" id="CanvasTexture_2jks1"]

[node name="EndGame" type="CanvasLayer"]
script = ExtResource("2_q2oeq")
metadata/_edit_vertical_guides_ = [0.0, 320.0]
metadata/_edit_horizontal_guides_ = [179.0]

[node name="BlackScreen" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_mhttp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o4h8i")
texture = SubResource("CanvasTexture_2jks1")

[node name="MarginContainerEnd" type="MarginContainer" parent="BlackScreen"]
layout_mode = 0
offset_top = 28.0
offset_right = 320.0
offset_bottom = 57.0

[node name="EndText" type="RichTextLabel" parent="BlackScreen/MarginContainerEnd"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.466667, 0.133333, 1)
bbcode_enabled = true
text = "[center] Vous avez été recalé..."

[node name="StadeLabel" type="RichTextLabel" parent="BlackScreen"]
layout_mode = 2
offset_left = 13.0
offset_top = 78.0
offset_right = 306.0
offset_bottom = 90.0
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
text = "Note pour le scénario stade :"
scroll_active = false

[node name="BureauLabel" type="RichTextLabel" parent="BlackScreen"]
layout_mode = 2
offset_left = 13.0
offset_top = 94.0
offset_right = 311.0
offset_bottom = 105.0
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
text = "Note pour le scénario bureau :"
scroll_active = false

[node name="BoxeLabel" type="RichTextLabel" parent="BlackScreen"]
layout_mode = 2
offset_left = 13.0
offset_top = 111.0
offset_right = 306.0
offset_bottom = 123.0
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
text = "Note pour le scénario musculation :"
scroll_active = false

[node name="MoyenneLabel" type="RichTextLabel" parent="BlackScreen"]
layout_mode = 0
offset_left = 13.0
offset_top = 127.0
offset_right = 301.0
offset_bottom = 139.0
theme_override_font_sizes/normal_font_size = 7
bbcode_enabled = true
text = "Moyenne finale :"
scroll_active = false

[node name="EXIT" type="Button" parent="BlackScreen"]
layout_mode = 0
offset_left = 110.0
offset_top = 155.0
offset_right = 209.0
offset_bottom = 179.0
theme = ExtResource("1_o4h8i")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "QUITTER LE JEU"
flat = true

[connection signal="pressed" from="BlackScreen/EXIT" to="." method="_on_exit_pressed"]
